add: delete chat handler
